design todolist card and fixed todomaincard height make scroll and hide scrollbar

--- a/src/components/TodoMainCard/TodoMainCard.css
+++ b/src/components/TodoMainCard/TodoMainCard.css
@@ -1,3 +1,9 @@
 .TodoMainCard {
   width: 70%;
+  height: 80%;
+  overflow: auto;
+  box-shadow: 0 0 20px #adadad;
+}
+.TodoMainCard::-webkit-scrollbar {
+  display: none;
 }
